# codex-reproduction

./: .gitignore  PLAN.md  README.md  TEST_DOCS.md  pyproject.toml
agent_cli/: __init__.py  agents_loader.py  approval.py  cli.py  config.py  model_client.py  plan_store.py  policy.py  progress_store.py  prompt_builder.py  renderer.py  responses_types.py  session.py  token_estimator.py  tui_app.py
agent_cli/storage/: session_store.py  transcript.py
agent_cli/tools/: base.py  read_file.py  shell.py  update_plan.py  write_file.py
docs/: harness-engineering-report.md
docs/decisions/: 0001-add-optional-textual-tui.md
tests/: __init__.py  test_agents_loader.py  test_approval.py  test_cli.py  test_compaction.py  test_config.py  test_doctor.py  test_doctor_fallback.py  test_doctor_permissions.py  test_integration_backends.py  test_max_turns.py  test_plan_store.py  test_policy.py  test_policy_shell_guard.py  test_read_file_truncation.py  test_renderer_integration.py  test_request_building.py  test_resume.py  test_session.py  test_shell_guard_inline_code.py  test_shell_tool.py  test_streaming.py  test_streaming_error.py  test_token_estimator.py  test_tui_app.py
